Bug 302125 - taskbar grouping popup too narrow
Summary: taskbar grouping popup too narrow
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-taskbar (other bugs)
Version First Reported In: 4.9.0
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 207016 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-06-18 13:36 UTC by Martin Koller
Modified: 2012-08-15 21:53 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.1
Sentry Crash Report:


Attachments
screenshot of taskbar popup (27.72 KB, image/png)
2012-06-18 13:37 UTC, Martin Koller
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Koller 2012-06-18 13:36:20 UTC
When I have e.g. 2 kwrite windows open, which are grouped in the taskbar and now I want to bring one of these to the foreground I nee to check which one and click in the taskbar to show the popup which contains the 2 entries.

The content in the popup should be much wider, e.g. use at least the same width as the window-list widget.

See attached screenshot: with that few characters displayed, the whole popup is useless and I need to try both of them.




Reproducible: Always
Comment 1 Martin Koller 2012-06-18 13:37:00 UTC
Created attachment 71910 [details]
screenshot of taskbar popup
Comment 2 Martin Koller 2012-08-04 12:08:43 UTC
added a patch https://git.reviewboard.kde.org/r/105849/
Comment 3 Martin Koller 2012-08-15 19:44:39 UTC
*** Bug 207016 has been marked as a duplicate of this bug. ***
Comment 4 Martin Koller 2012-08-15 21:52:07 UTC
Git commit 5d1e8bc806e4230d77e5adce00ec3812c31d7dee by Martin Koller.
Committed on 15/08/2012 at 23:45.
Pushed by mkoller into branch 'KDE/4.9'.

increase the width of group items in the popup

this patch changes the width of the task group popup to be able
to read the full title of the window.
The minimum width is like it was before, but if the title is wider,
it will increase the width up to 80% of the available corona width.
FIXED-IN: 4.9.1
REVIEW: 105849

M  +9    -1    plasma/desktop/applets/tasks/abstracttaskitem.cpp
M  +9    -21   plasma/desktop/applets/tasks/taskgroupitem.cpp
M  +7    -2    plasma/desktop/applets/tasks/taskitemlayout.cpp

http://commits.kde.org/kde-workspace/5d1e8bc806e4230d77e5adce00ec3812c31d7dee
Comment 5 Martin Koller 2012-08-15 21:53:07 UTC
Git commit 1e64a33e3d64e51de5fadd67cdbe036f7a605f2d by Martin Koller.
Committed on 15/08/2012 at 23:45.
Pushed by mkoller into branch 'master'.

increase the width of group items in the popup

this patch changes the width of the task group popup to be able
to read the full title of the window.
The minimum width is like it was before, but if the title is wider,
it will increase the width up to 80% of the available corona width.
FIXED-IN: 4.9.1
REVIEW: 105849

M  +9    -1    plasma/desktop/applets/tasks/abstracttaskitem.cpp
M  +9    -21   plasma/desktop/applets/tasks/taskgroupitem.cpp
M  +7    -2    plasma/desktop/applets/tasks/taskitemlayout.cpp

http://commits.kde.org/kde-workspace/1e64a33e3d64e51de5fadd67cdbe036f7a605f2d