increase the width of group items in the popup

this patch changes the width of the task group popup to be able
to read the full title of the window.
The minimum width is like it was before, but if the title is wider,
it will increase the width up to 80% of the available corona width.

BUG: 302125
FIXED-IN: 4.9.1
REVIEW: 105849